cabal-version:   3.0
name:            jsun
version:         0.0.0.1
license:         NONE
author:          Wyirt
maintainer:      joe@example.com
build-type:      Simple

common warnings
    ghc-options: -Wall

executable example
    import:           warnings
    main-is:          Main.hs
    build-depends:    base
    hs-source-dirs:   src
    default-language: Haskell2010
